operatorconfig/moduleconfig/authorization/v2.6.1/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-server
  namespace: <NAMESPACE>
spec:
  selector:
    app: proxy-server
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tenant-service
  namespace: <NAMESPACE>
spec:
  selector:
    app: tenant-service
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: role-service
  namespace: <NAMESPACE>
  labels:
    app: role-service
spec:
  replicas: <AUTHORIZATION_ROLE_SERVICE_REPLICAS>
  selector:
    matchLabels:
      app: role-service
  template:
    metadata:
      labels:
        csm: <NAME>
        app: role-service
        csmNamespace: <CSM_NAMESPACE>
    spec:
      serviceAccountName: role-service
      containers:
        - name: role-service
          image: <AUTHORIZATION_ROLE_SERVICE_IMAGE>
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
              name: grpc
          volumeMounts:
            - name: config-volume
              mountPath: /etc/karavi-authorization/config
            - name: csm-config-params
              mountPath: /etc/karavi-authorization/csm-config-params
      volumes:
        - name: config-volume
          secret:
            secretName: karavi-config-secret
        - name: csm-config-params
          configMap:
            name: csm-config-params
---
apiVersion: v1
kind: Service
metadata:
  name: role-service
  namespace: <NAMESPACE>
spec:
  selector:
    app: role-service
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: storage-service
  namespace: <NAMESPACE>
spec:
  selector:
    app: storage-service
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc
    - port: 2112
      targetPort: 2112
      name: promhttp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-controller
  namespace: <NAMESPACE>
  labels:
    app: authorization-controller
spec:
  replicas: <AUTHORIZATION_CONTROLLER_REPLICAS>
  selector:
    matchLabels:
      app: authorization-controller
  template:
    metadata:
      labels:
        csm: <NAME>
        app: authorization-controller
        csmNamespace: <CSM_NAMESPACE>
    spec:
      serviceAccountName: authorization-controller
      containers:
        - name: authorization-controller
          image: <AUTHORIZATION_CONTROLLER_IMAGE>
          imagePullPolicy: Always
          args:
            - '--authorization-namespace=<NAMESPACE>'
            - '--health-probe-bind-address=:8081'
            - '--leader-elect=<AUTHORIZATION_LEADER_ELECTION_ENABLED>'
            - '--tenant-service-address=tenant-service.<NAMESPACE>.svc.cluster.local:50051'
            - '--storage-service-address=storage-service.<NAMESPACE>.svc.cluster.local:50051'
            - '--role-service-address=role-service.<NAMESPACE>.svc.cluster.local:50051'
            - '--controller-reconcile-interval=<AUTHORIZATION_CONTROLLER_RECONCILE_INTERVAL>'
          ports:
            - containerPort: 50052
              name: grpc
          volumeMounts:
            - name: config-volume
              mountPath: /etc/karavi-authorization/config
            - name: csm-config-params
              mountPath: /etc/karavi-authorization/csm-config-params
      volumes:
        - name: config-volume
          secret:
            secretName: karavi-config-secret
        - name: csm-config-params
          configMap:
            name: csm-config-params
---
apiVersion: v1
kind: Service
metadata:
  name: authorization-controller
  namespace: <NAMESPACE>
spec:
  selector:
    app: authorization-controller
  ports:
    - port: 50052
      targetPort: 50052
      name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: <AUTHORIZATION_REDIS_NAME>
  namespace: <NAMESPACE>
spec:
  type:
  clusterIP: None
  selector:
    app: <AUTHORIZATION_REDIS_NAME>
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      name: <AUTHORIZATION_REDIS_NAME>
---
apiVersion: v1
kind: Service
metadata:
  name: <AUTHORIZATION_REDIS_COMMANDER>
  namespace: <NAMESPACE>
spec:
  selector:
    app: <AUTHORIZATION_REDIS_COMMANDER>
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: <AUTHORIZATION_REDIS_SENTINEL>
  namespace: <NAMESPACE>
spec:
  clusterIP: None
  ports:
    - port: 5000
      targetPort: 5000
      name: <AUTHORIZATION_REDIS_SENTINEL>
  selector:
    app: <AUTHORIZATION_REDIS_SENTINEL>
---
apiVersion: v1
kind: Service
metadata:
  name: <AUTHORIZATION_REDIS_SENTINEL>-svc
  namespace: <NAMESPACE>
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      name: <AUTHORIZATION_REDIS_SENTINEL>-svc
  selector:
    app: <AUTHORIZATION_REDIS_SENTINEL>
