operatorconfig/moduleconfig/authorization/v2.6.1/gateway-api-controller.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: <NAMESPACE>
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/part-of: nginx-gateway-fabric
    app.kubernetes.io/version: 2.4.2
  name: <NAMESPACE>-nginx-gateway-fabric
  namespace: <NAMESPACE>
spec:
  ports:
    - name: agent-grpc
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app.kubernetes.io/instance: <NAMESPACE>
    app.kubernetes.io/name: nginx-gateway-fabric
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: <NAMESPACE>
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/part-of: nginx-gateway-fabric
    app.kubernetes.io/version: 2.4.2
  name: <NAMESPACE>-nginx-gateway-fabric
  namespace: <NAMESPACE>
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: <NAMESPACE>
      app.kubernetes.io/name: nginx-gateway-fabric
  template:
    metadata:
      labels:
        csm: <NAME>
        app.kubernetes.io/instance: <NAMESPACE>
        app.kubernetes.io/name: nginx-gateway-fabric
        csmNamespace: <CSM_NAMESPACE>
    spec:
      containers:
        - name: nginx-gateway-fabric
          image: ghcr.io/nginx/nginx-gateway-fabric:2.4.2
          imagePullPolicy: IfNotPresent
          args:
            - controller
            - --gateway-ctlr-name=gateway.nginx.org/nginx-gateway-controller
            - --gatewayclass=nginx
            - --config=<NAMESPACE>-nginx-gateway-fabric-config
            - --service=<NAMESPACE>-nginx-gateway-fabric
            - --agent-tls-secret=<NAMESPACE>-nginx-gateway-fabric-agent-tls
            - --metrics-port=9113
            - --health-port=8081
            - --leader-election-lock-name=<NAMESPACE>-nginx-gateway-fabric-leader-election
          ports:
            - containerPort: 8443
              name: agent-grpc
            - containerPort: 9113
              name: metrics
            - containerPort: 8081
              name: health
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: health
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - KILL
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: nginx-conf
            - mountPath: /etc/nginx/stream-conf.d
              name: nginx-stream-conf
            - mountPath: /etc/nginx/module-includes
              name: module-includes
            - mountPath: /etc/nginx/secrets
              name: nginx-secrets
            - mountPath: /var/run/nginx
              name: nginx-run
            - mountPath: /etc/nginx/includes
              name: nginx-includes
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/run/secrets/ngf
              name: nginx-agent-tls
              readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        fsGroup: 1001
        runAsNonRoot: true
      shareProcessNamespace: true
      serviceAccountName: <NAMESPACE>-nginx-gateway-fabric
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: nginx-conf
        - emptyDir: {}
          name: nginx-stream-conf
        - emptyDir: {}
          name: module-includes
        - emptyDir: {}
          name: nginx-secrets
        - emptyDir: {}
          name: nginx-run
        - emptyDir: {}
          name: nginx-cache
        - emptyDir: {}
          name: nginx-includes
        - emptyDir: {}
          name: tmp
        - name: nginx-agent-tls
          secret:
            secretName: <NAMESPACE>-nginx-gateway-fabric-agent-tls
            items:
              - key: tls.crt
                path: ca.crt
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  labels:
    app.kubernetes.io/instance: <NAMESPACE>
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/part-of: nginx-gateway-fabric
    app.kubernetes.io/version: 2.4.2
  name: nginx
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller
  parametersRef:
    group: gateway.nginx.org
    kind: NginxProxy
    name: <NAMESPACE>-nginx-gateway-fabric-proxy-config
    namespace: <NAMESPACE>
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/instance: <NAMESPACE>
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/part-of: nginx-gateway-fabric
    app.kubernetes.io/version: 2.4.2
  name: <NAMESPACE>-gateway
  namespace: <NAMESPACE>
spec:
  gatewayClassName: nginx
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: karavi-selfsigned-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: <NAMESPACE>
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/part-of: nginx-gateway-fabric
    app.kubernetes.io/version: 2.4.2
  name: <NAMESPACE>-gateway
  namespace: <NAMESPACE>
spec:
  parentRefs:
    - name: <NAMESPACE>-gateway
      namespace: <NAMESPACE>
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: proxy-server
          port: 8080
